Make width calculation responsive.

--- a/src/app/modules/HomePage/Portfolio/portfolio-card.scss
+++ b/src/app/modules/HomePage/Portfolio/portfolio-card.scss
@@ -1,6 +1,7 @@
 $title_font_size: 23px;
 $descriptoin_font_size: $small_font;
-$card_width: 270px;
+$padding: 10px;
+$card_width: calc(100% - #{$padding});
 
 .portfolio-card {
   display: block;
@@ -9,6 +10,7 @@ $card_width: 270px;
   text-align: left;
   border: 1px solid $light_border_color;
   background-color: $theme_light_bg;
+  margin: 0 $padding $padding 0;
 
   .portfolio-card-title {
     font-size: $title_font_size;
