--- a/src/app/modules/HomePage/homepage.scss
+++ b/src/app/modules/HomePage/homepage.scss
@@ -59,3 +59,4 @@ $search_bar_height: 45px;
 @import './Blog/index';
 @import './WorkHistory/index';
 @import './SideBar/sidebar';
+@import './SearchTab/search-tab';
