--- a/src/app/modules/HomePage/Portfolio/portfolio-card.scss
+++ b/src/app/modules/HomePage/Portfolio/portfolio-card.scss
@@ -19,8 +19,16 @@ $card_width: calc(100% - #{$padding});
   .portfolio-card-image {
     display: block;
     width: 100%;
+    margin: 10px 0;
   }
 
+  .portfolio-car-desc-lead {
+    font-weight: $font_weight_bold;
+  }
+
+  .tag-links {
+    //text-align: right;
+  }
   .tag-link {
     color: $blue;
     cursor: pointer;
