Styling for blog and work history card margin.

--- a/src/app/modules/HomePage/Blog/blog-card.scss
+++ b/src/app/modules/HomePage/Blog/blog-card.scss
@@ -1,6 +1,7 @@
 $title_font_size: 23px;
 $descriptoin_font_size: $small_font;
-$card_width: 100%;
+$padding: 10px;
+$card_width: calc(100% - #{2 * $padding});
 
 .blog-card {
   display: block;
@@ -9,6 +10,7 @@ $card_width: 100%;
   text-align: left;
   border: 1px solid $light_border_color;
   background-color: $theme_light_bg;
+  margin: 0 $padding $padding 0;
 
   .blog-card-title {
     font-size: $title_font_size;
