--- a/src/app/modules/HomePage/homepage.scss
+++ b/src/app/modules/HomePage/homepage.scss
@@ -43,6 +43,7 @@ $search_and_filter_bar_height: 40px;
         .route-view-container {
           @include transition(transform $transition_time $transition_function);
           padding-top: $search_bar_height;
+          padding-bottom: 10px;
           background-color: $light_white;
           width: calc(100% - #{$homepage_side_bar_width});
           //border-left: 1px solid $light_border_color;
