--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,7 @@
 @import 'styles/_base.scss';
 
 @import './modules/HomePage/homepage';
+@import './shared/Loader/dual-ring-loader';
 
 body {
   //background: $theme_dark_color; TODO remove
