search tab view for mobile.

--- a/src/app/modules/HomePage/homepage.mobile.scss
+++ b/src/app/modules/HomePage/homepage.mobile.scss
@@ -1,5 +1,12 @@
 #homepage {
   .homepage-content-container {
+    .homepage-content {
+      .tab-view-container {
+        .route-view-container {
+          width: 100%;
+        }
+      }
+    }
   }
 }
 
