Update work history for mobile.

--- a/src/app/modules/HomePage/homepage.mobile.scss
+++ b/src/app/modules/HomePage/homepage.mobile.scss
@@ -13,3 +13,4 @@
 @import './Splash/splash.mobile';
 @import './TopBar/top-bar.mobile';
 @import './SideBar/sidebar.mobile';
+@import './WorkHistory/index.mobile';
