Add 1px offest for sticking top bar : prevets search bar from hiding when click on item initially. (because scroll up is activated.)

--- a/src/app/modules/HomePage/TopBar/navigation.search-and-filter.scss
+++ b/src/app/modules/HomePage/TopBar/navigation.search-and-filter.scss
@@ -71,6 +71,7 @@ $search_input_offset: 5px;
     box-shadow: $drop_down_shadow;
     border-top: 1px solid $light_grey_border_color;
     line-height: 20px;
+    overflow: hidden;
     > div {
       @include transition($transition);
       background-color: $grey;
