--- a/src/app/styles/_material.scss
+++ b/src/app/styles/_material.scss
@@ -4,6 +4,8 @@ $transition_function: ease;
 //$transition_function: cubic-bezier(0.25, 0.8, 0.25, 1);
 
 $transition: all $transition_time $transition_function;
+$transition_move_and_fade: #{transform $transition_time $transition_function,
+  opacity $transition_time $transition_function};
 
 $slope_inside_shadow: inset 2px 2px 10px 0px rgba(0, 0, 0, 0.3);
 $tab_button_shadow: 2px 0px 10px 2px rgba(0, 0, 0, 0.2);
