Extract social links from side bar and add to about me section.

--- a/src/app/modules/HomePage/homepage.scss
+++ b/src/app/modules/HomePage/homepage.scss
@@ -64,3 +64,4 @@ $search_and_filter_bar_height: 40px;
 @import './SideBar/sidebar';
 @import './SearchTab/search-tab';
 @import './AboutMe/about-me';
+@import './SocialLinks/socail-links';
