--- a/src/app/modules/HomePage/AboutMe/about-me.scss
+++ b/src/app/modules/HomePage/AboutMe/about-me.scss
@@ -4,6 +4,30 @@
   padding: 40px;
   text-align: left;
   border: 1px solid $light_border_color;
+
+  .connect-with-me {
+    .social-links {
+      margin: 20px auto;
+      > li {
+        float: left;
+        padding: 0;
+        margin-right: 10px;
+
+        a {
+          color: inherit;
+          text-decoration: none;
+          line-height: 25px;
+          border: 1px solid $light_border_color;
+          padding: 10px 20px;
+          border-radius: 15px;
+          /* color: #ffc104; */
+          font-weight: 500;
+          background: #fbfbfb;
+          background: $light_white;
+        }
+      }
+    }
+  }
 }
 
 @import 'about-me.top-bar';
