Styling about me for mobile.

--- a/src/app/modules/HomePage/AboutMe/about-me.scss
+++ b/src/app/modules/HomePage/AboutMe/about-me.scss
@@ -8,6 +8,8 @@
   .connect-with-me {
     .social-links {
       margin: 20px auto;
+      @extend .resize-container;
+
       > li {
         float: left;
         padding: 0;
@@ -19,7 +21,7 @@
           line-height: 25px;
           border: 1px solid $light_border_color;
           padding: 10px 20px;
-          border-radius: 15px;
+          border-radius: $default_border_radius;
           /* color: #ffc104; */
           font-weight: 500;
           background: #fbfbfb;
