--- a/src/app/modules/HomePage/homepage.mobile.scss
+++ b/src/app/modules/HomePage/homepage.mobile.scss
@@ -14,3 +14,4 @@
 @import './TopBar/top-bar.mobile';
 @import './SideBar/sidebar.mobile';
 @import './WorkHistory/index.mobile';
+@import './AboutMe/about-me.mobile';
