--- a/src/app/modules/HomePage/homepage.scss
+++ b/src/app/modules/HomePage/homepage.scss
@@ -65,3 +65,4 @@ $search_and_filter_bar_height: 40px;
 @import './SearchTab/search-tab';
 @import './AboutMe/about-me';
 @import './SocialLinks/socail-links';
+@import './components/Button/button';
